Kubernetes/BlueGreenApps/webapp-blue.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp-blue
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp-blue
    spec:
      containers:
      - name: webapp-blue
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hostvolume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: hostvolume
        hostPath:
          path: /home/docker/blueapp
