Kubernetes/BlueGreenApps/webapp-green.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp-green
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp-green
    spec:
      containers:
      - name: webapp-green
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hostvolume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: hostvolume
        hostPath:
          path: /home/docker/greenapp
