Kubernetes/BlueGreenApps/webservice-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: webservice-blue
  labels:
    run: webservice-blue
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: webapp-blue
