Kubernetes/BlueGreenApps/webservice-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: webservice-green
  labels:
    run: webservice-green
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: webapp-green
