Kubernetes/BlueGreenApps/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blue-green-ingress
spec:
  rules:
  - host: blue.myweb.com
    http:
      paths:
      - backend: 
          serviceName: webservice-blue
          servicePort: 80
  - host: green.myweb.com
    http:
      paths:
      - backend:
          serviceName: webservice-green
          servicePort: 80
